# short.rs

./: .dockerignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
src/: main.rs  short.rs  shortdb.rs
templates/: complete.html  index.html
