[package]
name = "shortner"
version = "0.1.0"
authors = ["Marcus Hann <marcus@hhra.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
tera = "0.11"
rand = "0.7"
formdata = "0.12"
url = "2.1"
simple-error = "0.2"
http = "0.1"
redis = "0.14"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"